# spreadsheet

./: README.md  checksum-Elixir.Spreadsheet.Calamine.exs  mix.exs
.github/workflows/: release.yml.disabled
lib/: spreadsheet.ex
lib/spreadsheet/: calamine.ex
native/spreadsheet/: Cargo.toml
native/spreadsheet/src/: lib.rs
