[package]
name = "spreadsheet"
version = "0.4.11"
authors = []
edition = "2021"

[lib]
name = "spreadsheet"
crate-type = ["cdylib"]

[dependencies]
calamine = { version = "0.34.0", features = ["chrono"]}
rustler = {version = "0.37.3", features = ["serde"]}
chrono = "0.4.44"
serde = "1.0.228"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
